home-assistant/zwavejs2mqtt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zwavejs2mqtt
  namespace: home-assistant
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: websocket
      port: 3000
      targetPort: websocket
  selector:
    app.kubernetes.io/name: zwavejs2mqtt
    app.kubernetes.io/instance: zwavejs2mqtt
